# subconscious

./: .gitignore  README.md  installer.spec  main.py  pyproject.toml  requirements.txt  subconscious.pyw  subconscious.spec
db/: __init__.py  models.py
docs/: Feature_Roadmap.md
examples/: echo.py  subconscious.py
frontend/: subconscious.py
frontend/components/: contextlist.py  gui_constants.py  mainwindow.py  message_block.py  sidebar.py  titlebar.py
installer/src/: installer.spec  main.py  titlebar.py
lang/: __init__.py  es.json  zh.json
logic/: agent.py
src/: app.py  main.py  requirements.txt  subconscious.py  subconscious.spec
src/components/: contextlist.py  data_objects.py  gui.py  leftbar.py  log_setup.py  main_window.py  message_block.py  message_bubble.py  rightbar.py  titlebar.py
src/lang/: __init__.py  en.json
src/utilities/: filechange.py  lang_loader.py
utilities/: dictobj.py  dynamic_app_icon.py  make_ico.py
